# starhtml-skill

./: LICENSE  README.md  avaliacao_corrigida.md  correcoes_implementadas.md  pyproject.toml  starhtml_check.py
skills/starhtml/: SKILL.md
skills/starhtml/reference/: demos.md  icons.md  slots.md  starhtml_check.py  starui.md
starhtml/: SKILL.md
starhtml/reference/: handlers.md  js.md
