[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starhtml-check"
version = "0.1.0"
description = "Static analyzer for StarHTML — optimized for LLM tool-call loops"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # zero deps — stdlib only

[project.scripts]
starhtml-check = "starhtml_check:main"

[tool.hatch.build.targets.wheel]
packages = ["starhtml_check.py"]
