[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "starhtml-check"
dynamic = ["version"]
description = "Static analyzer for StarHTML — optimized for LLM tool-call loops"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # zero deps — stdlib only

[project.scripts]
starhtml-check = "starhtml_check:main"
starhtml_check = "starhtml_check:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["."]
